scribble-test/src/test/resources/good/misc/globals/gdo/Do25.scr
module good.misc.globals.gdo.Do25;


type <java> "java.lang.String" from "rt.jar" as String;


global protocol Do25(role A, role B)
{
	do Do25a<l1(String), String>(A, B);
	//do Do25a<l1(String), ()>(A, B);  // Uncomment is bad  
	//do Do25a<String, String>(A, B); // Uncomment is bad
	//do Do25a<l1(String)>(A, B);  // Uncomment is bad
	//do Do25a(A, B);  // Uncomment is bad
	//do Do25a<(), String, ()>(A, B);  // Uncomment is bad
}

global protocol Do25a<sig X, type Y>(role C, role D)
{
	X from C to D;
	(Y) from D to C;
}

